@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?ivyXmlPath=ivy.xml&amp;confs=java6%2Ceclipse&amp;ivySettingsPath=&amp;acceptedTypes=jar&amp;sourceTypes=source&amp;javadocTypes=javadoc&amp;sourceSuffixes=-source%2C-sources%2C-src&amp;javadocSuffixes=-javadoc%2C-javadocs%2C-doc%2C-docs&amp;doRetrieve=true&amp;retrievePattern=lib%2F%5Bartifact%5D-%5Brevision%5D.%5Bext%5D&amp;alphaOrder=true"/>
+	<classpathentry exported="true" kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?ivyXmlPath=ivy.xml&amp;confs=java6%2Ceclipse&amp;ivySettingsPath=&amp;acceptedTypes=jar&amp;sourceTypes=source&amp;javadocTypes=javadoc&amp;sourceSuffixes=-source%2C-sources%2C-src&amp;javadocSuffixes=-javadoc%2C-javadocs%2C-doc%2C-docs&amp;doRetrieve=true&amp;retrievePattern=lib%2F%5Bartifact%5D-%5Brevision%5D.%5Bext%5D&amp;alphaOrder=true"/>
 	<classpathentry excluding="**/*.java|.svn/*" kind="src" path="conf"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry excluding=".svn/*|org/red5/server/script/rhino/" kind="src" path="src"/>
